[tool.poetry]
name = "report"
version = "1.0.0"
description = "广告业务日周月报表"
authors = ["Andy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
pandas = "^1.5.3"
sqlalchemy = "^2.0.7"
xlwings = "^0.30.2"
requests = "^2.28.2"
statsmodels = "^0.13.5"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
